--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -9,10 +9,9 @@
                 <div class="offset-1 col-10 col-lg-5 pb-4 ps-3 pe-3 mt-4 align-self-center">
                     <h3 class="orange-font mb-4" style="font-size: larger">/&nbspGlobal Vintage Love&nbsp/</h3>
                     <h2 class="mb-4">Unlocking the world of vintage one treasure at a time</h2>
-                    <span class="mb-4">
-                        <p>In a world of globalization and fast-paced movement, Global Vintage Love reminds us of a simpler time.
-                        We offer a large variety of vintage assets, all from the ease of one platform.</p>
-                        <p>Whether updating one room, or revamping rooms in your entire home, Global Vintage Love is here for you.</p>
+                    <span class="mb-4" style="max-width: 50ch;">
+                        <p>We were all built for story. Celebrating the things that made us who we are is how we make this world a more beautiful and sustainable place.</p>
+                        <p>Global Vintage Love sources timeless pieces, delivers them to you with zero packing waste and educates you on the true value of vintage.</p>
                     </span>
                     <div class="mt-4">
                         <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button blue-font rounded-3 mt-3" style="width: 11em;">Shop Now</a>
