Join the movement now sends e-mails

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -85,7 +85,7 @@
                     <span class="white-font" style="font-variant: titling-caps;">Our Community</span><br/><br/>
                     <span class="orange-font">See new inventory first!</span><br/>
                     <input id="email-marketing-signup" type="email" class="orange-boarder blue-font rounded-3" placeholder="Yes, here's my email"><br/>
-                    <input type="submit" class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" value="Subscribe" onclick="marketingSignupAsync()">
+                    <button type="submit" class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" value="" onclick="marketingSignupAsync()">Subscribe</button>
                     <span id="result" class="d-none white-font ps-3"></span>
                 </div>
             </div>
