--- a/store/templates/join-the-movement-section.html
+++ b/store/templates/join-the-movement-section.html
@@ -10,28 +10,37 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 orange-background text-center" style="position: relative; height: 538px">
-                    <form class="vertical-center">
+                    <form method="post" class="vertical-center">
+                        {% csrf_token %}
+                        {{ form_valid }}
+                        {% if join_form_errors %}
+                            {% for error in join_form.errors %}
+                                <div class="alert alert-danger">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                         <div class="row g-4">
                             <div class="col-sm-10 offset-sm-1 col-md-5 offset-md-1">
-                                <input type="text" class="form-control" placeholder="First name">
+                                {{ join_form.first_name }}
                             </div>
                             <div class="col-sm-10 offset-sm-1 col-md-5 offset-md-0">
-                                <input type="text" class="form-control" placeholder="Last name">
+                                {{ join_form.last_name }}
                             </div>
                         </div>
                         <div class="row g-4 mt-1">
                             <div class="col-10 offset-1">
-                                <input type="text" class="form-control" placeholder="Subject">
+                                {{ join_form.subject }}
                             </div>
                         </div>
                         <div class="row g-4 mt-1">
                             <div class="col-10 offset-1">
-                                <textarea class="form-control" placeholder="Type your message here..." rows=6></textarea>
+                                {{ join_form.message }}
                             </div>
                         </div>
                         <div class="row g-4 mt-1">
                             <div class="col-10 offset-1">
-                                <button class="form-control btn blue-button rounded-3" type="button">Submit</button>
+                                <input class="form-control btn blue-button rounded-3" id="form-submit" style="max-width: 10em;" type="submit" value="Submit">
                             </div>
                         </div>
                     </form>
