--- a/store/templates/join-the-movement-complete-section.html
+++ b/store/templates/join-the-movement-complete-section.html
@@ -2,14 +2,14 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-md-6" style="height: 538px; background-image: url('{% get_static_prefix %}img/join_hero.webp'); background-size: cover; background-position: center;">
+                <div class="col-sm-12 col-md-6" style="height: 600px; background-image: url('{% get_static_prefix %}img/join_hero.webp'); background-size: cover; background-position: center;">
                     <div class="text-center">
                         <h3 class="orange-font cinzel-font mt-5">JOIN THE MOVEMENT</h3>
                         <span class="mt-2">Let us help grow your vintage business without making any more<br/>
                             investments than you already have... we are in this together!</span>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 orange-background text-center" style="position: relative; height: 538px">
+                <div class="col-sm-12 col-md-6 orange-background text-center vertical-center" style="position: relative; height: 600px">
                     <p>Thank you for joining our movement!</p>
                     <p>We will reach out soon.</p>
                 </div>
