hide similar products on mobile

--- a/products/templates/similar-products.html
+++ b/products/templates/similar-products.html
@@ -1,4 +1,4 @@
-    <section id="similar-products" class="grey-background">
+    <section id="similar-products" class="grey-background d-none d-md-grid">
         <div style="padding-top: 1em; padding-bottom: 1em;" class="row">
             <div class="col-12 col-lg-2">
                 You may also like
