Added shipping estimates

--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="row">
                             <p id="cost"></p>
-                            <p id="shipping-timeline">if under 50 miles within a week - 51-150 2 weeks - 151 above 2-3 weeks</p>
+                            <p id="shipping-timeline"></p>
                         </div>
                         {% if payment_errors %}
                         <div class="row">
