Done with shipping.  Added live chat to the shipping page.

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="referrer" content="no-referrer-when-downgrade">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <meta name="google-site-verification" content="0tGKrfRTiF5XowGPr06M8-RJa2Nh84yhJaeQbDBRjYg" />
@@ -31,6 +32,7 @@
 </head>
 
 <body style="overflow-x: hidden;">
+
     <nav class="navbar navbar-light navbar-expand-lg navigation-clean-button">
         <div class="container-fluid">
             <div class="text-center d-lg-none" style="width: 100%">
